--- a/_config.yml
+++ b/_config.yml
@@ -52,6 +52,7 @@ sass:
 permalink:   /:categories/:title/
 
 # Amount of post to show on home page
+# paginate_path: "/recent_Posts/page:num/"
 paginate: 3
 
 kramdown:
